test/bad/numbers/int06.px

9223372036854775807.fraction
